[package]
name = "ks-image-compare"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Compare images with ease"
readme = "README.adoc"
repository = "https://github.com/kober-systems/ks-image-compare.git"
keywords = ["gui", "image-diff", "image-comparsion", "diff"]
categories = ["gui","command-line-utilities", "development-tools", "multimedia::images", "visualization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4", features = ["derive"]}
eframe = "0.25.0"
egui = "0.25.0"
egui_extras = { version = "0.25.0", features = ["all_loaders"]}
image = "0.24.8"
thiserror = "1.0.56"
